# Inventory-Management-System

./: README.md
cli/src/: display.cpp  main.cpp  perform_transaction.cpp  validate.cpp
gui/: CMakeLists.txt  run_gui.sh
gui/include/: common.h
gui/src/: display.cpp  main.cpp  main_window.cpp  perform_transaction.cpp  validate.cpp
